# scraper

./: .env.dist  .gitignore  AllConfig.pm  Loader.pm  README.md  RaConfig.pm  RhfConfig.pm  a.py  adin.js  app.js  app.pl  app_struct.js  b.py  backup.sh  bazalekow.pl  client_secret.json  compress.pl  compress_all.pl  credentials.json  db.pl  db.sh  google-docs.js  install.sh  json.pl  lento.js  mongo.pl  multicore.pl  oglaszamy24.js  olx.js  package.json  proxies.csv  proxy.php  proxy.php.save  sync.js  test.pl  test_proxy.pl  token.json  utf.pl
composerset/: app.py
compressor/: .gitignore  README.md  compress.py  decompress.py  dict.py  test.bash
compressor/cpp/: CMakeLists.txt  main.cpp  make.bash  remake.bash  run.bash
dict/: 3329.txt  3330.txt  3331.txt  3332.txt  3333.txt  3334.txt  3335.txt  3336.txt  3337.txt  3338.txt  3339.txt  3341.txt  3342.txt  3343.txt  3344.txt  3345.txt  3346.txt  3347.txt  3348.txt  3349.txt  3350.txt  3351.txt  3352.txt  3353.txt  3354.txt  3355.txt  3356.txt  3357.txt  3358.txt  3359.txt  3360.txt  3361.txt  3362.txt  3363.txt  3364.txt  3365.txt  3366.txt  3367.txt  3368.txt  3369.txt  (+61 more)
docker/: Dockerfile  app.py  docker-compose.yml
lcs/: .gitignore  README.md  code_blocks.cpp  free_basic.bas  get_txt.cpp  lazarus.pas  lsc_optima.cpp  lsc_optima.php  lsc_rect.php  s1.txt  s2.txt
lib/: AllConfig.pm  Compressor.pm  Loader.pm  RaConfig.pm  RhfConfig.pm  SpccConfig.pm
src/: config.js  dict.js  docs.js  helper.js  mailer.js  manager.js  random.js  scraper.js  sms.js
test/: 1.html  dict.test.js  docs.test.js  mail.test.js
(+4 files in other folders)
